--- a/templates/article.html
+++ b/templates/article.html
@@ -9,6 +9,7 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
 
         h1 {
@@ -21,6 +22,7 @@
             word-wrap: break-word;
             font-size: 1.2em;
             line-height: 1.5;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
     </style>
 </head>
