--- a/templates/articles.html
+++ b/templates/articles.html
@@ -9,6 +9,7 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
         ul {
             list-style: none;
