--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -10,6 +10,7 @@
             margin: 0 auto;
             padding: 20px;
             font-size: 1.15em;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
         ul {
             list-style: none;
