--- a/templates/article.html
+++ b/templates/article.html
@@ -24,13 +24,24 @@
             line-height: 1.5;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
+        .back a {
+            color: green;         
+            text-decoration: none;
+        }
+        .back a:hover {
+            color: darkgreen;    
+            text-decoration: none; 
+            transform: scale(1.1);
+        }
     </style>
 </head>
 <body>
     <div class="content-wrapper">
         <h1>{{ title }}</h1>
         <pre>{{ content }}</pre>
-        <a href="{{ url_for('index') }}">Back to Home</a>
+        <div class="back">
+            <h3><a href="{{ url_for('index') }}"> ← Back to Home</a></h3>
+        </div>
     </div>
 </body>
 </html>
