--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -17,13 +17,32 @@
             padding: 0;
         }
         li {
-            margin-bottom: 10px;
+            margin-bottom: 30px;
         }
         .no-results {
             font-style: italic;
             color: #888;
         }
+        ul li a {
+            color: rgb(0, 0, 119);     
+            text-decoration: none; 
+        }
+        ul li a:hover {
+            color: rgb(40, 120, 224);
+            text-decoration: none;  
+        }
+        .back a {
+            color: green;         
+            text-decoration: none;
+        }
+        .back a:hover {
+            color: darkgreen;    
+            text-decoration: none; 
+            transform: scale(1.1);
+        }
     </style>
+    
+    
 </head>
 <body>
     <div class="content-wrapper">
@@ -39,7 +58,9 @@
         {% else %}
         <p class="no-results">No articles found containing the word "{{ word }}".</p>
         {% endif %}
-        <p><a href="{{ url_for('index') }}">Back to Home</a></p>
+            <div class="back">
+                <h3><a href="{{ url_for('index') }}"> ← Back to Home</a></h3>
+            </div>
     </div>
 </body>
 </html>
