--- a/templates/article.html
+++ b/templates/article.html
@@ -39,6 +39,7 @@
 <body>
     <div class="content-wrapper">
         <h1>{{ title }}</h1>
+        <p><strong>{{ date }}</strong> </p>
         <pre>{{ content }}</pre>
         <div class="back">
             <h3><a href="{{ url_for('index') }}"> ← Back to Home</a></h3>
