--- a/templates/article.html
+++ b/templates/article.html
@@ -34,9 +34,29 @@
             text-decoration: none; 
             transform: scale(1.1);
         }
+
+        nav {
+    padding: 10px;
+    text-align: center;
+}
+
+nav a {
+    text-decoration: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(0, 0, 0); 
+    margin: 0 20px;
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
     </style>
 </head>
 <body>
+    <nav>
+        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('articles') }}">All Articles</a>
+        <a href="#">Climate in Time</a> 
+    </nav>
     <div class="content-wrapper">
         <h1>{{ title }}</h1>
         <p><strong>{{ date }}</strong> </p>
