--- a/templates/articles.html
+++ b/templates/articles.html
@@ -7,9 +7,10 @@
     <title>Articles</title>
     <style>
         .content-wrapper {
-            max-width: 800px;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
+            font-size: 1.15em;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
         ul {
@@ -17,13 +18,57 @@
             padding: 0;
         }
         li {
-            margin-bottom: 10px;
+            margin-bottom: 20px;
         }
+        .no-results {
+            font-style: italic;
+            color: #888;
+        }
+        ul li a {
+            color: rgb(0, 0, 119);     
+            text-decoration: none; 
+        }
+        ul li a:hover {
+            color: rgb(40, 120, 224);
+            text-decoration: none;  
+        }
+        .back a {
+            color: green;         
+            text-decoration: none;
+        }
+        .back a:hover {
+            color: darkgreen;    
+            text-decoration: none; 
+            transform: scale(1.1);
+        }
+        nav {
+    padding: 10px;
+    text-align: center;
+}
+
+nav a {
+    text-decoration: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(0, 0, 0); 
+    margin: 0 20px;
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+
+
     </style>
 </head>
 <body>
+    <nav>
+        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('articles') }}">All Articles</a>
+        <a href="#">Climate in Time</a> 
+    </nav>
     <div class="content-wrapper">
+
         <h1>All Articles</h1>
+        
         <ul>
             {% for article in articles %}
             <li>
@@ -31,6 +76,9 @@
             </li>
             {% endfor %}
         </ul>
+        <div class="back">
+            <h3><a href="{{ url_for('index') }}"> ← Back to Home</a></h3>
+        </div>
     </div>
 </body>
 </html>
