--- a/templates/index.html
+++ b/templates/index.html
@@ -37,12 +37,35 @@
             font-weight: bold;
             transition: transform 0.3s ease;
         }
-        .word-cloud a:hover {
+        .word-cloud a:hover, nav a {
             transform: scale(1.1);
         }
+
+        nav {
+    padding: 10px;
+    text-align: center;
+}
+
+nav a {
+    text-decoration: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(0, 0, 0); 
+    margin: 0 20px;
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+
+
     </style>
 </head>
 <body>
+    <nav>
+        <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('articles') }}">All Articles</a>
+        <a href="#">Climate in Time</a> 
+    </nav>
+
     <div class="content-wrapper">
         <div class="word-cloud">
             {% for word, frequency in top_words_phrases %}
