--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@ nav a {
     <nav>
         <a href="{{ url_for('index') }}">Home</a>
         <a href="{{ url_for('articles') }}">All Articles</a>
-        <a href="#">Climate in Time</a> 
+        <a href="{{ url_for('articles_by_year') }}">Climate in Time</a>
     </nav>
 
     <div class="content-wrapper">
